tests/fixtures/Mocks/InvalidFoo/BadListener.php
<?php

namespace Tests\Fixtures\Mocks\InvalidFoo;

final class BadListener
{

}
